Fixed scrolling issue by scrolling the text upwards as the active character moves and adding an overflow of hidden.
The scrolloffset lives in state and is dynamically updated inline with a transform: translateY

--- a/src/components/css/typinginput.css
+++ b/src/components/css/typinginput.css
@@ -1,4 +1,7 @@
-#user-input{
-    position: absolute;
-    left: -10000px;
+#user-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  height: 0;
 }
